# bad-apple

./: .gitignore  CLAUDE.md  CMakeLists.txt
include/: convert_image.h  player_utils.h  utils.h
src/: converter.cpp  player.cpp
src/utils/: convert_image.cpp  player_utils.cpp  utils.cpp
